classement pour celien
une belle version

--- a/classement.html
+++ b/classement.html
@@ -13,7 +13,7 @@
         <div>
             Lorem ipsum
         </div>
-
+        <div class="separer">
         <!-- Classement 1 -->
         <table>
             <thead>
@@ -90,8 +90,6 @@
               </tr>
             </tbody>
           </table>
-          <table>
-            <thead>
 
                 <br>
 
@@ -133,7 +131,7 @@
                 <td>H.Naess,M.Roenningen</td>
                 <td>92</td>
               </tr>
-              <tr>
+              <tr class="fongris">
                 <td>5</td>
                 <td>Italie</td>
                 <td>J.Germani,G.Bertuzzi</td>
@@ -145,7 +143,7 @@
                 <td>M.Bergmann,H.Wille</td>
                 <td>98</td>
               </tr>
-              <tr>
+              <tr class="fongris">
                 <td>7</td>
                 <td>Nouvelle Zélande</td>
                 <td>J.Aleh,M.Meech</td>
@@ -157,7 +155,7 @@
                 <td>M.Soffiatti Grael,K.Kunze</td>
                 <td>112</td>
               </tr>
-              <tr>
+              <tr class="fongris">
                 <td>9</td>
                 <td>Australie</td>
                 <td>O.Price,E.Haseldine</td>
@@ -171,10 +169,11 @@
               </tr>
             </tbody>
           </table>
-
+        </div>
           <br>
 
           <!-- Classement 3 -->
+          <div class="separer">
          <table>
             <thead>
               <tr>
@@ -188,19 +187,19 @@
                 <th>Noms</th>
                 <th>Points</th>
                </tr>
-              <tr>
+              <tr class=" jaune fongris">
                 <td>1</td>
                 <td>Pays-Bas</td>
                 <td>M.Bouvmeester</td>
                 <td>38</td>
               </tr>
-              <tr>
+              <tr class="rbleu">
                 <td>2</td>
                 <td>Danemark</td>
                 <td>A.Rindom</td>
                 <td>61</td>
               </tr>
-              <tr>
+              <tr class="rouge fongris">
                 <td>3</td>
                 <td>Norvège</td>
                 <td>L.Hoest</td>
@@ -212,7 +211,7 @@
                 <td>M.Jayet</td>
                 <td>90</td>
               </tr>
-              <tr>
+              <tr class="fongris">
                 <td>5</td>
                 <td>Italie</td>
                 <td>C.Benini Floriani</td>
@@ -224,7 +223,7 @@
                 <td>E.Vorobeva</td>
                 <td>97</td>
               </tr>
-              <tr>
+              <tr class="fongris">
                 <td>7</td>
                 <td>Belgique</td>
                 <td>E.Plasschaert</td>
@@ -236,7 +235,7 @@
                 <td>S.Douglas</td>
                 <td>105</td>
               </tr>
-              <tr>
+              <tr class="fongris">
                 <td>9</td>
                 <td>Etat-Unis</td>
                 <td>E.Reineke</td>
@@ -250,7 +249,6 @@
               </tr>
             </tbody>
           </table>
-        
         <br>
         
         <!-- Classement 4 -->
@@ -267,19 +265,19 @@
                 <th>Noms</th>
                 <th>Points</th>
                </tr>
-              <tr>
+              <tr class=" jaune fongris">
                 <td>1</td>
                 <td>Australie</td>
                 <td>M.Wearn</td>
                 <td>40</td>
               </tr>
-              <tr>
+              <tr class="rbleu">
                 <td>2</td>
                 <td>Chypre</td>
                 <td>P.Kontides</td>
                 <td>56</td>
               </tr>
-              <tr>
+              <tr class="rouge fongris">
                 <td>3</td>
                 <td>Autriche</td>
                 <td>S.Peschiera</td>
@@ -291,7 +289,7 @@
                 <td>J.Vadnai</td>
                 <td>84</td>
               </tr>
-              <tr>
+              <tr class="fongris">
                 <td>5</td>
                 <td>Norvège</td>
                 <td>H.Tomasgaard</td>
@@ -303,7 +301,7 @@
                 <td>M.Beckett</td>
                 <td>87</td>
               </tr>
-              <tr>
+              <tr class="fongris">
                 <td>7</td>
                 <td>Nouvelle-Zélande</td>
                 <td>T.Saunders</td>
@@ -315,7 +313,7 @@
                 <td>C.Seguel Lacamara</td>
                 <td>94</td>
               </tr>
-              <tr>
+              <tr class="fongris">
                 <td>9</td>
                 <td>Italie</td>
                 <td>L.Chiavarini</td>
@@ -329,10 +327,12 @@
               </tr>
             </tbody>
         </table>
+        </div>
 
         <br>
 
         <!-- Classement 5 -->
+         <div class="separer">
         <table>
             <thead>
               <tr>
@@ -346,19 +346,19 @@
                 <th>Noms</th>
                 <th>Temps</th>
                </tr>
-              <tr>
+              <tr class="jaune fongris">
                 <td>1</td>
                 <td>Italie</td>
                 <td>M.Maggetti</td>
                 <td>7:38(finale)</td>
               </tr>
-              <tr>
+              <tr class="rbleu">
                 <td>2</td>
                 <td>Israel</td>
                 <td>S.Kantor</td>
                 <td>7:44(finale)</td>
               </tr>
-              <tr>
+              <tr class="rouge fongris">
                 <td>3</td>
                 <td>Grande-Bretagne</td>
                 <td>E.Wilson</td>
@@ -370,7 +370,7 @@
                 <td>M.Bazo German</td>
                 <td>6:39(demi-finale)</td>
               </tr>
-              <tr>
+              <tr class="fongris">
                 <td>5</td>
                 <td>Chine</td>
                 <td>Z.Yan</td>
@@ -382,7 +382,7 @@
                 <td>T.Steinlein</td>
                 <td>7:21(quart de finale)</td>
               </tr>
-              <tr>
+              <tr class="fongris">
                 <td>7</td>
                 <td>France</td>
                 <td>H.Noesmoen</td>
@@ -394,7 +394,7 @@
                 <td>M.Dizarnowska</td>
                 <td>7:36(quart de finale)</td>
               </tr>
-              <tr>
+              <tr class="fongris">
                 <td>9</td>
                 <td>Republique Tcheque</td>
                 <td>K.Svikova</td>
@@ -425,19 +425,19 @@
                 <th>Noms</th>
                 <th>Temps</th>
                </tr>
-              <tr>
+              <tr class="jaune fongris">
                 <td>1</td>
                 <td>Israel</td>
                 <td>T.Reuveny</td>
                 <td>6:38(finale)</td>
               </tr>
-              <tr>
+              <tr class="rbleu">
                 <td>2</td>
                 <td>Australie</td>
                 <td>G.Morris</td>
                 <td>6:48(finale)</td>
               </tr>
-              <tr>
+              <tr class="rouge fongris">
                 <td>3</td>
                 <td>Pays-Bas</td>
                 <td>L.Van Opzeeland</td>
@@ -449,7 +449,7 @@
                 <td>J.Armit</td>
                 <td>6:02(demi-finale)</td>
               </tr>
-              <tr>
+              <tr class="fongris">
                 <td>5</td>
                 <td>Grande-Bretagne</td>
                 <td>S.Sills</td>
@@ -461,7 +461,7 @@
                 <td>E.Colombo</td>
                 <td>6:02(quart de finale)</td>
               </tr>
-              <tr>
+              <tr class="fongris">
                 <td>7</td>
                 <td>Aruba</td>
                 <td>E.Westera</td>
@@ -473,7 +473,7 @@
                 <td>N.Lyons</td>
                 <td>6:13(quart de finale)</td>
               </tr>
-              <tr>
+              <tr class="fongris">
                 <td>9</td>
                 <td>Pologne</td>
                 <td>P.Tarnowski</td>
@@ -487,10 +487,11 @@
               </tr>
             </tbody>
         </table>
-
+         </div>
         <br>
 
         <!-- Classement 7 -->
+         <div class="separer">
         <table>
           <thead>
             <tr>
@@ -504,19 +505,19 @@
               <th>Noms</th>
               <th>Points</th>
              </tr>
-            <tr>
+            <tr class="jaune fongris">
               <td>1</td>
               <td>Grande-Bretagne</td>
               <td>E.Aldrige</td>
               <td>1</td>
             </tr>
-            <tr>
+            <tr class="rbleu">
               <td>2</td>
               <td>France</td>
               <td>L.Nolot</td>
               <td>2</td>
             </tr>
-            <tr>
+            <tr class="rouge fongris">
               <td>3</td>
               <td>Pays-Bas</td>
               <td>A.Lammerts</td>
@@ -528,7 +529,7 @@
               <td>D.Moroz</td>
               <td>4</td>
             </tr>
-            <tr>
+            <tr class="fongris">
               <td>5</td>
               <td>Suisse</td>
               <td>E.Lengwiler</td>
@@ -540,7 +541,7 @@
               <td>G.Zuckerman</td>
               <td>6</td>
             </tr>
-            <tr>
+            <tr class="fongris">
               <td>7</td>
               <td>Nouvelle-Zélande</td>
               <td>B.Whitehead</td>
@@ -552,7 +553,7 @@
               <td>L.Meyer</td>
               <td>8</td>
             </tr>
-            <tr>
+            <tr class="fongris">
               <td>9</td>
               <td>Pologne</td>
               <td>J.Damasiewicz</td>
@@ -583,19 +584,19 @@
             <th>Noms</th>
             <th>Points</th>
            </tr>
-          <tr>
+          <tr class="jaune fongris">
             <td>1</td>
             <td>Autriche</td>
             <td>V.Bontus</td>
             <td>1</td>
           </tr>
-          <tr>
+          <tr class="rbleu">
             <td>2</td>
             <td>Slovénie</td>
             <td>T.Vodisek</td>
             <td>2</td>
           </tr>
-          <tr>
+          <tr class="rouge fongris">
             <td>3</td>
             <td>Singapour</td>
             <td>M.Maeder</td>
@@ -607,7 +608,7 @@
             <td>R.Pianoso</td>
             <td>4</td>
           </tr>
-          <tr>
+          <tr class="fongris">
             <td>5</td>
             <td>Brésil</td>
             <td>B.Lobo</td>
@@ -619,7 +620,7 @@
             <td>A.Mazella</td>
             <td>6</td>
           </tr>
-          <tr>
+          <tr class="fongris">
             <td>7</td>
             <td>Chine</td>
             <td>Q.Huang</td>
@@ -631,7 +632,7 @@
             <td>J.Maus</td>
             <td>8</td>
           </tr>
-          <tr>
+          <tr class="fongris">
             <td>9</td>
             <td>Grande-Bretagne</td>
             <td>C.Bainbridge</td>
@@ -645,10 +646,11 @@
           </tr>
         </tbody>
     </table>
-
+    </div>
     <br>
 
        <!-- Classement 9 -->
+        <div class="separer">
        <table>
         <thead>
           <tr>
@@ -662,19 +664,19 @@
             <th>Noms</th>
             <th>Points</th>
            </tr>
-          <tr>
+          <tr class="jaune fongris">
             <td>1</td>
             <td>Autriche</td>
             <td>L.Vadlau,L.Maehr</td>
             <td>38</td>
           </tr>
-          <tr>
+          <tr class="rbleu">
             <td>2</td>
             <td>Japon</td>
             <td>K.Okada,M.Yoshioka</td>
             <td>41</td>
           </tr>
-          <tr>
+          <tr class="rouge fongris">
             <td>3</td>
             <td>Suède</td>
             <td>A.Dahlberg,L.Karlsson</td>
@@ -686,7 +688,7 @@
             <td>J.Xammar Hernandez,N.Brugman Cabot</td>
             <td>49</td>
           </tr>
-          <tr>
+          <tr class="fongris">
             <td>5</td>
             <td>Portugal</td>
             <td>D.Costa,C.Joao</td>
@@ -698,7 +700,7 @@
             <td>C.Lecointre,J.Mion</td>
             <td>56</td>
           </tr>
-          <tr>
+          <tr class="fongris">
             <td>7</td>
             <td>Israel</td>
             <td>N.Hasson,N.Lasry</td>
@@ -710,7 +712,7 @@
             <td>Y.Mermod,M,Siegenthaleur</td>
             <td>68</td>
           </tr>
-          <tr>
+          <tr class="fongris">
             <td>9</td>
             <td>Australie</td>
             <td>N.Jerwood,C.Nicholas</td>
@@ -741,19 +743,19 @@
                 <th>Noms</th>
                 <th>Points</th>
                </tr>
-              <tr>
+              <tr class="jaune fongris">
                 <td>1</td>
                 <td>Italie</td>
                 <td>R.Tita,M.Banti Marianna</td>
                 <td>51</td>
               </tr>
-              <tr>
+              <tr class="rbleu">
                 <td>2</td>
                 <td>Argentine</td>
                 <td>M.Majdalani,E.Bosco</td>
                 <td>67</td>
               </tr>
-              <tr>
+              <tr class="rouge fongris">
                 <td>3</td>
                 <td>Nouvelle-Zélande</td>
                 <td>M.Wilkinson,E.Dawson</td>
@@ -765,7 +767,7 @@
                 <td>J.Gimson,A.Burnet</td>
                 <td>78(côté parcours)</td>
               </tr>
-              <tr>
+              <tr class="fongris">
                 <td>5</td>
                 <td>France</td>
                 <td>T.Mourniac,L.Berthomieu</td>
@@ -777,7 +779,7 @@
                 <td>L.Van der Meer,B.Bouwer</td>
                 <td>98</td>
               </tr>
-              <tr>
+              <tr class="fongris">
                 <td>7</td>
                 <td>Finlande</td>
                 <td>S.Kurtbay,A.Kerkinsen</td>
@@ -789,7 +791,7 @@
                 <td>P.Kohloff,A.Stuhlemmer</td>
                 <td>118</td>
               </tr>
-              <tr>
+              <tr class="fongris">
                 <td>9</td>
                 <td>Brésil</td>
                 <td>J.Siemsen,M.Mariutti Arndt</td>
@@ -803,7 +805,7 @@
               </tr>
             </tbody>
         </table>
-
+        </div>
 
 
     </body>
