--- a/sponsors.html
+++ b/sponsors.html
@@ -34,7 +34,7 @@
             fournisseur officiel
         </div>
         <br>
-        <img class="image" src="./images/decathlon.png">
+        <img class="image" src="./images/decathlon.png" alt="dacatthlon">
         <div id="bleu">
             la Fédération Française de Voile et Tribord, la marque de voile du groupe Decathlon, s’engagent pour l’olympiade 2021- 2024. Cet accord, construit sur la base d’une vision commune du développement de la voile, vise à faciliter à la pratique. Il permettra notamment de co-créer des produits adaptés, de soutenir le développement des clubs de voile, de promouvoir le réseau et les offres des Ecoles Françaises de Voile et d’équiper les Equipes de France. En adéquation avec le plan de développement de Tribord et le Projet Sportif Fédéral de la FFVoile l’ensemble des collaborations viseront également à produire un maximum de produits éco-conçus.
         </div>
