biographie finie à part menu responsive

--- a/biographie.html
+++ b/biographie.html
@@ -9,16 +9,16 @@
 <header>
 
 </header>
+<button><img src="./images/menu.png" alt="Menu"></button>
+<nav id="nav_haut">
+    <ul id="menu">
+        <a href="./index.html"><div><p>Accueil</p></div></a>
+        <a href="./statistique.html" id="voile"><div><p>La voile en France</p></div></a>
+        <a href="./classement.html"><div><p>Classement</p></div></a>
+        <a href="./sponsors.html"><div><p>Sponsors</p></div></a>
+    </ul>
+</nav>
 <body>
-    <nav id="nav_haut">
-        <ul>
-            <a href="./index.html"><div><p>Accueil</p></div></a>
-            <a href="./statistique.html"><div><p>La voile en France</p></div></a>
-            <a href="./classement.html"><div><p>Classement</p></div></a>
-            <a href="./sponsors.html"><div><p>Sponsors</p></div></a>
-        </ul>
-    </nav>
-
     <div id="intro">Charline Picon, Jean-Baptiste Bernaz et Lauriane Nolot incarnent l’élite de la voile française. Passion, discipline et audace rythment leurs carrières, marquées par des défis relevés avec panache sur les plus grandes compétitions internationales.</div>
 
     <div class="fond">
