--- a/biographie.html
+++ b/biographie.html
@@ -66,4 +66,13 @@
         </div>
     </div>
 </body>
+
+<nav id="nav_bas">
+    <ul>
+        <a href="./biographie.html"><div><p>Biographies</p></div></a>
+        <a href="./statistique.html"><div><p>La voile en France</p></div></a>
+        <a href="./classement.html"><div><p>Classement</p></div></a>
+        <a href="./sponsors.html"><div><p>Sponsors</p></div></a>
+    </ul>
+</nav>
 </html>
