--- a/index.html
+++ b/index.html
@@ -125,7 +125,11 @@
         </nav>
     </article>
     <footer>
-        <img src="./images/" alt="">
+        <img id="logo" src="./images/Logo_voile_paris2024.svg">
+        <a href="./mention.html"><p id="ml">Mentions Légales</p></a>
+        <p id="ct">Contactez-nous</p>
+        <a href="https://www.facebook.com/ffvoile"><img id="fb" src="./images/logo_facebook.png"></a>
+        <a href="https://www.instagram.com/ffvoile/"><img id="ins" src="./images/logo_instagram.webp"></a>
     </footer>
 </body>
 </html>
