--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 </div>
             </div>
             <img id="grand_logo" src="./images/Logo_voile_paris2024.svg">
-            <div id="sponsors"><a href="./biographie.html">Sponsors</a></div>
+            <div id="sponsors"><a href="./sponsors.html">Sponsors</a></div>
         </div>
     </header>
     <nav id="nav_haut">
