page bio DÉFINITIVE !!!!!!!!!!
masterclass faudra peut être editer le code mais sans changer le résultat

--- a/biographie.html
+++ b/biographie.html
@@ -9,7 +9,14 @@
 <header>
 
 </header>
-<button><img src="./images/menu.png" alt="Menu"></button>
+
+<input type="checkbox" id="bouton_menu">
+<label class="bouton_menu" for="bouton_menu">
+    <span></span>
+    <span></span>
+    <span></span>
+</label>
+
 <nav id="nav_haut">
     <ul id="menu">
         <a href="./index.html"><div><p>Accueil</p></div></a>
