--- a/sponsors.html
+++ b/sponsors.html
@@ -98,6 +98,6 @@
             <a href="./biographie.html"><div><p>Biographies</p></div></a>
             <a href="./statistique.html"><div><p>La voile en France</p></div></a>
             <a href="./classement.html"><div><p>Classement</p></div></a>
-            <a href="./sponsors.html"><div><p>Sponsors</p></div></a>
+            <a href="./index.html"><div><p>acceuil</p></div></a>
         </ul>
     </nav>
