--- a/statistique.html
+++ b/statistique.html
@@ -9,7 +9,10 @@
     <link type="text/css" href="css/style_statistique.css" rel="stylesheet">
 </head>
 <body>
-    <header></header>
+    <header>
+
+    </header>
+
     <nav id="nav_haut">
         <ul>
             <a href="./biographie.html"><div><p>Biographies</p></div></a>
@@ -18,27 +21,30 @@
             <a href="./sponsors.html"><div><p>Sponsors</p></div></a>
         </ul>
     </nav>
+
     <article>
+        <h2>Intro</h2>
         <p id="intro">Ces derniers temps fédération francaise de voile rencontre des difficultés financières, notamment a cause de la crise du COVID ainsi que la hausse de l'inflation, étant donné que c'est un sport qui reste très coûteux malgrès certains clubs qui proposent des prix très attractifs. Cependant, il est important de comprendre comment les jeux olympiques vont permettre à la FFV de redynamiser la pratique de la voile sportive en France. Ainsi, à l'aide de cette page vous pourrez comprendre les chiffres de la voile en France<p>
-        <div id="deuxième_bloc">
+        <div class="bloc" id="deuxième_bloc">
             <img src="images/Somme_FFV.png" alt="revenu"/>
             <div id="texte_2">
-            <h3>La FFV généré en 2019 122 000€ en 2020 cette somme à augmenter de 11 000€ ce qui l'éléve à 133 000€. En 2021 suite au covid et sécheresse cette somme baisse énormément et ateint les 120 00€, 2022 elle continue a baisser et atteient les 114 000. 2023 fut aussi une mauvaise anné car l'argent générer baisse encore de 9 000€ soit à 105 000€. heureusement en 2024 on a un pique d'augmentation et ateient à ouveaux les 119 000€ </h3>
+            <p>La FFV a généré en 2020: 133 000€. Cependant l'inflation et la baisse des moyens financiers des français a constitué un manque a gagner énorme les années suivantes, pour atteindre une somme générée en 2023 de 105 000€ soit une baisse d'environ 25 000€. Cependant, on remarque que les Jeux Olympiques qui ont eu lieux a Marseille l'année 2024 on permis à la FFV de remonter la pente en améliorant la somme qu'elle a généré de plus de 12 000€.</p>
+            </div>
         </div>
-            <br>
-        </div>
-        <div id="troisième_bloc">
-            <h3>Le nombre de club de la FFV en 2019 s'élève à 1076 club, ce nombre augmentera jusqu'en 2021 en passant à 1082 et 2022 à 1091 club. Malheuresement ce nombre sera en constante baisse passant à 1088 club en 2022, 1080 club en 2023 et 1072 club en 2024</h3>
+        <div class="bloc" id="troisième_bloc">
             <img src="images/club_FFV.png" alt="club"/>
-            <br>
+            <p>Le nombre de club de la FFV en 2019 s'élève à 1076 club, ce nombre augmentera jusqu'en 2021 en passant à 1082 et 2022 à 1091 club. Malheuresement ce nombre sera en constante baisse passant à 1088 club en 2022, 1080 club en 2023 et 1072 club en 2024</p>
         </div>
-        <div id="quatrième_bloc">
+        <div class="bloc" id="quatrième_bloc">
             <img src="images/licence_FFV.png" alt="licence"/>
             <div id="texte_3">
-            <h3>Le nombre de licence vendu par la FFV est très variable depuis 2019 car en 2019 elle est de 280 000 puis en 2020 cette vente baisse énormént et atteint les 221 000 puis remonte jusqu'a 272 000 licence vendu en 2021. Ce nombre baisse légèrement en 2022 pour atteindre 262 000 il continue de baiser en 2023 et atteint les 220 000.lors de cette dernière anée le nombre de licence réaugmente subitement jusqu'à 258 000 </h3>
+            <p>Le nombre de licence vendu par la FFV est très variable depuis 2019 car en 2019 elle est de 280 000 puis en 2020 cette vente baisse énormént et atteint les 221 000 puis remonte jusqu'a 272 000 licence vendu en 2021. Ce nombre baisse légèrement en 2022 pour atteindre 262 000 il continue de baiser en 2023 et atteint les 220 000.lors de cette dernière anée le nombre de licence réaugmente subitement jusqu'à 258 000 <p>
             </div>
         </div>
     </article>
-    <footer></footer>
+
+    <footer>
+
+    </footer>
 </body>
 </html>
