--- a/statistique.html
+++ b/statistique.html
@@ -24,21 +24,23 @@
 
     <article>
         <h2>Intro</h2>
-        <p id="intro">Ces derniers temps fédération francaise de voile rencontre des difficultés financières, notamment a cause de la crise du COVID ainsi que la hausse de l'inflation, étant donné que c'est un sport qui reste très coûteux malgrès certains clubs qui proposent des prix très attractifs. Cependant, il est important de comprendre comment les jeux olympiques vont permettre à la FFV de redynamiser la pratique de la voile sportive en France. Ainsi, à l'aide de cette page vous pourrez comprendre les chiffres de la voile en France<p>
+        <p id="intro">Ces derniers temps, la Fédération Française de Voile rencontre des difficultés financières, notamment en raison de la crise du COVID et de la hausse de l'inflation. Cela s'explique par le fait que la voile reste un sport très coûteux, malgré les efforts de certains clubs pour proposer des tarifs attractifs. Cependant, il est essentiel de comprendre comment les Jeux Olympiques peuvent contribuer à redynamiser la pratique de la voile sportive en France. Cette page vous permettra ainsi d'explorer en détail les chiffres de la voile en France.<p>
         <div class="bloc" id="deuxième_bloc">
             <img src="images/Somme_FFV.png" alt="revenu"/>
             <div id="texte_2">
-            <p>La FFV a généré en 2020: 133 000€. Cependant l'inflation et la baisse des moyens financiers des français a constitué un manque a gagner énorme les années suivantes, pour atteindre une somme générée en 2023 de 105 000€ soit une baisse d'environ 25 000€. Cependant, on remarque que les Jeux Olympiques qui ont eu lieux a Marseille l'année 2024 on permis à la FFV de remonter la pente en améliorant la somme qu'elle a généré de plus de 12 000€.</p>
+            <p>La FFV a réalisé en 2020 un chiffre d'affaires de 133 000 €. Cependant, l'inflation et la baisse des moyens financiers des Français ont entraîné un manque à gagner important dans les années suivantes, aboutissant à un chiffre d'affaires de 105 000 € en 2023, soit une baisse d'environ 25 000 €. Cependant, les Jeux Olympiques, qui ont eu lieu à Marseille en 2024, ont permis à la FFV de redresser la situation en augmentant son chiffre d'affaires de plus de 12 000 €.</p>
             </div>
         </div>
         <div class="bloc" id="troisième_bloc">
             <img src="images/club_FFV.png" alt="club"/>
-            <p>Le nombre de club de la FFV en 2019 s'élève à 1076 club, ce nombre augmentera jusqu'en 2021 en passant à 1082 et 2022 à 1091 club. Malheuresement ce nombre sera en constante baisse passant à 1088 club en 2022, 1080 club en 2023 et 1072 club en 2024</p>
+            <p>Le graphique montre l'évolution du nombre de clubs officiels affiliés à la Fédération Française de Voile (FFV) entre 2019 et 2023. On observe une augmentation progressive entre 2019 et 2021, où le nombre de clubs atteint son pic à environ 1 090. Cette croissance peut s’expliquer par une dynamique positive dans la pratique de la voile durant cette période. Cependant, à partir de 2021, une diminution graduelle est visible, passant sous les 1 070 clubs en 2023. Cette baisse peut être liée aux conséquences de la crise économique post-COVID-19 et à l’impact de l’inflation, qui ont pu freiner les financements et la participation. Ce déclin soulève des questions sur la pérennité et l’attractivité des clubs de voile, malgré les efforts de la FFV pour soutenir le secteur.</p>
         </div>
         <div class="bloc" id="quatrième_bloc">
             <img src="images/licence_FFV.png" alt="licence"/>
             <div id="texte_3">
-            <p>Le nombre de licence vendu par la FFV est très variable depuis 2019 car en 2019 elle est de 280 000 puis en 2020 cette vente baisse énormént et atteint les 221 000 puis remonte jusqu'a 272 000 licence vendu en 2021. Ce nombre baisse légèrement en 2022 pour atteindre 262 000 il continue de baiser en 2023 et atteint les 220 000.lors de cette dernière anée le nombre de licence réaugmente subitement jusqu'à 258 000 <p>
+            <p>Le graphique présente l'évolution du nombre de licenciés à la Fédération Française de Voile (FFV) entre 2019 et 2023. En 2019, le nombre de licenciés atteint environ 280 000, marquant un point haut. Cependant, une chute brutale est observée en 2020, où le nombre de licenciés descend à environ 220 000. Cette baisse significative peut être attribuée à la crise du COVID-19, qui a fortement impacté les activités sportives en France.
+                En 2021, on note une reprise notable, avec un retour à environ 270 000 licenciés, témoignant d’un regain d’intérêt pour la voile après les assouplissements des restrictions sanitaires. Toutefois, cette dynamique positive est suivie d’une nouvelle baisse en 2022, où le nombre de licenciés diminue à environ 240 000, avant de chuter encore plus bas en 2023, atteignant son point le plus faible autour de 220 000 licenciés.
+                Malgré cela, une reprise semble amorcée en fin de période, avec une légère remontée du nombre de licenciés en 2023, probablement soutenue par les préparatifs des Jeux Olympiques de 2024 et les efforts de promotion de la pratique de la voile par la FFV. Ce graphique illustre donc les fluctuations importantes du nombre de licenciés, influencées par des facteurs économiques et sanitaires.<p>
             </div>
         </div>
     </article>
