--- a/classement.html
+++ b/classement.html
@@ -11,11 +11,21 @@
 
     </header>
     <body>
+      <nav id="nav_haut">
+        <ul id="menu">
+            <a href="./index.html"><div><p>Accueil</p></div></a>
+            <a href="./statistique.html" id="voile"><div><p>La voile en France</p></div></a>
+            <a href="./classement.html"><div><p>Classement</p></div></a>
+            <a href="./sponsors.html"><div><p>Sponsors</p></div></a>
+        </ul>
+      </nav>
         <div>
-            Lorem ipsum
+            <h2>Intro</h2>
+            <p>Découvrez les performances des meilleurs navigateurs olympiques sur cette page dédiée aux classements ! Nous vous présentons les 10 premiers athlètes ou équipes de chaque catégorie de voile, mettant en avant les talents qui se démarquent sur la scène internationale. Ces classements offrent un aperçu rapide des compétiteurs les plus performants et des moments clés des Jeux Olympiques. Idéal pour suivre les résultats des grandes épreuves, en particulier les performances des Français dans leur quête de médailles.</p>
         </div>
         <div class="separer">
         <!-- Classement 1 -->
+      <div id="tableaux">
         <table>
             <thead>
               <tr>
@@ -807,6 +817,7 @@
             </tbody>
         </table>
         </div>
+      </div>
 
 
     </body>
