--- a/sponsors.html
+++ b/sponsors.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=2">
     <meta name="viewport" content="width=device-width, initial-scale=3">
     <title>statistique</title>
-    <link type="text/css" href="css/style_sponsors.css" rel="stylesheet">
+    <link type="text/css" href="CSS/style_sponsors.css" rel="stylesheet">
 </head>
 <body>
     <header></header>
